[package]
name = "graph_coloring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "gen_data"
path = "src/gen_data.rs"


[dependencies]
itertools = "0.10.3"
lazy_static = "1.4.0"
petgraph = "0.6.2"
# 乱数
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"


# 競技プログラミングの入出力サポートその1
proconio = { version = "=0.3.6", features = ["derive"] }
average = "0.13.1"

